--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ol>
         <li><a href="#home">Home</a></li>
         <li><a href="#home">Navigation</a></li>
-        <li><a href="#home">Files</a></li>
+        <li><a href="filem.html">Files</a></li>
         <li><a href="subject/subject.html">Subjects</a></li>
         <li><a href="blogs.html">Blogs</a></li>
         <li><a href="#about">About</a></li>
