--- a/filem.html
+++ b/filem.html
@@ -201,7 +201,7 @@ const fileSystem = {
     "new.html": {
       icon: "📄",
       size: "15 KB",
-      link: "path/to/new.html",
+      link: "www.google.com",
       timestamp: "2024-11-19 02:00 PM",
     },
     "New folder": {
@@ -210,7 +210,7 @@ const fileSystem = {
           "NEW.PDF": {
             icon: "📄",
             size: "200 KB",
-            link: "path/to/new.pdf",
+            link: "chemistry.html",
             timestamp: "2024-11-19 02:30 PM",
           },
         },
